FIX_COMPILE: easyMDE error show on iex section.

--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -4,8 +4,16 @@
 @import url('https://fonts.googleapis.com/css?family=Pacifico');
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,200;1,400&display=swap');
 
-*{
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
   @apply font-poppins
+}
+
+html, body{
+  width: 100%;
+  height: 100%;
 }
 
 @layer components {
